--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<content-projection></content-projection>
+<!--<content-projection></content-projection>-->
+<view-encapsulation></view-encapsulation>
