--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,13 +79,17 @@ h4 {
     font-weight: 300;
     margin: 0;
 }
-app-root > content-projection {
+app-root > content-projection,
+app-root > view-encapsulation{
     display: inline-block;
     background-color: #FFFFFF;
     border-radius: 2px;
     border: 1px solid #dce5f2;
     box-shadow: 0 1px 4px rgba(53,60,72,0.1);
     padding: 30px 0;
+}
+app-root > view-encapsulation{
+    padding: 30px;
 }
 form {
     flex: 1 0;
