--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!--<content-projection></content-projection>-->
-<view-encapsulation></view-encapsulation>
+<!--<view-encapsulation></view-encapsulation>-->
+<custom-directives></custom-directives>
