--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,6 +87,17 @@ app-root > view-encapsulation {
     box-shadow: 0 1px 4px rgba(53,60,72,0.1);
     padding: 30px;
 }
+app-root > custom-directives {
+    display: inline-block;
+    background-color: #FFFFFF;
+    border-radius: 2px;
+    border: 1px solid #dce5f2;
+    box-shadow: 0 1px 4px rgba(53,60,72,0.1);
+    padding: 20px 30px;
+}
+app-root > custom-directives > div {
+    display: flex;
+}
 example-one {
 
 }
@@ -108,4 +119,19 @@ example-one {
 }
 example-one, example-two {
     padding: 10px 15px;
+}
+form {
+    flex: 1 0;
+    padding: 0 40px;
+}
+input[type="text"] {
+    display: block;
+    border: none;
+    background: #ffffff;
+    font-size: 15px;
+    padding: 6px 30px 6px 10px;
+    border-radius: 1px;
+    border: 1px solid #eeeeee;
+    margin-top: 10px;
+    width: 260px;
 }
