Creating custom structural Directive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!--<content-projection></content-projection>-->
 <!--<view-encapsulation></view-encapsulation>-->
-<custom-directives></custom-directives>
+<!--<custom-directives></custom-directives>-->
+<my-for-container></my-for-container>
