--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,19 +79,16 @@ h4 {
     font-weight: 300;
     margin: 0;
 }
-app-root > custom-directives {
-    display: inline-block;
+app-root {
+    display: block;
     background-color: #FFFFFF;
     border-radius: 2px;
     border: 1px solid #dce5f2;
     box-shadow: 0 1px 4px rgba(53,60,72,0.1);
     padding: 20px 30px;
 }
-label {
-    margin-bottom: 20px;
-}
-h3 {
-    margin-bottom: 20px;
+app-root > div {
+    display: flex;
 }
 form {
     flex: 1 0;
@@ -106,44 +103,13 @@ input[type="text"] {
     border-radius: 1px;
     border: 1px solid #eeeeee;
     margin-top: 10px;
-    width: 260px;
 }
-.tooltip-container {
-    position: relative;
+label {
+    margin-bottom: 20px;
 }
-.tooltip {
-    background: rgba(0, 0, 0, 0.7);
-    color: #fff;
-    line-height: 1;
-    font-size: 14px;
-    padding: 5px 7px;
-    border-radius: 5px;
-    position: absolute;
-    top: 0;
-    left: 100%;
-    white-space: nowrap;
-    display: none;
+h3 {
+    margin-bottom: 20px;
 }
-.tooltip--active {
-    display: block;
-}
-.tooltip:before {
-    position: absolute;
-    content: ' ';
-    top: 50%;
-    margin-top: -5px;
-    left: -5px;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 5px 5px 5px 0;
-    border-color: transparent rgba(0, 0, 0, 0.7) transparent transparent;
-    display: block;
-}
-span {
-    color: #9f72e6;
-    text-decoration: underline;
-    font-size: 12px;
-    font-weight: bold;
-    cursor: pointer;
+app-root div div {
+    flex: 15% 1 0;
 }
